# pyqt_pcf

./: .gitignore  LICENSE  README.md  pyproject.toml
pyqt_pcf/: main_window.py  menu_bar.py  point_cloud_widget.py  style.qss  xlsx_viewer.py
pyqt_pcf/Toolbar/: tool_bar.py
pyqt_pcf/Toolbar_Widgets/: base_widget.py  design.py  example_widget.py  multidiameter_config.yaml  multidiameter_widget.py  parameters_config.yaml  parameters_widget.py
pyqt_pcf/pc_forestry/predict/checkpoints/: catboost_model_cpu.pkl  catboost_model_cuda.pkl
