[tool.poetry]
name = "pyqt-pcf"
version = "0.2.1"
description = ""
authors = ["EenTweeDrie <eentweedrie@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pyqt_pcf"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
pc-forestry = {git = "https://github.com/EenTweeDrie/pc_forestry.git"}
pyqt6 = "^6.8.0"
pyopengl = "^3.1.9"
pywavefront = "^1.3.3"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#### pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
#### sympy-1.13.1 torch-2.5.1+cu121 torchaudio-2.5.1+cu121 torchvision-0.20.1+cu121